data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3836.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\95\80\80\80\00\01\03\65\6e"
    "\76\0d\65\78\74\65\72\6e\61\6c\5f\66\75\6e\63\00"
    "\00\03\83\80\80\80\00\02\01\01\04\84\80\80\80\00"
    "\01\70\00\01\07\98\80\80\80\00\01\14\69\6e\64\69"
    "\72\65\63\74\5f\63\61\6c\6c\5f\65\78\70\6f\72\74"
    "\00\01\09\87\80\80\80\00\01\00\41\00\0b\01\01\0a"
    "\9a\80\80\80\00\02\86\80\80\80\00\00\41\0a\10\00"
    "\0b\89\80\80\80\00\00\41\00\41\14\11\00\00\0b"
  )
""
)